# sdl2-sample

./: README.md
src/: CMakeLists.txt  CounterWidget.h  main.cpp  points  sdl_helpers.h  transformation.h  widget.h
